employer sharing apps anonymisation v2 for UR created

--- a/app/views/v14/employer/account/application-shared-saved-v1.html
+++ b/app/views/v14/employer/account/application-shared-saved-v1.html
@@ -24,9 +24,9 @@ Manage apprentices
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Response sent to training provider: Yes, I would like to interview this applicant.
+          You would like to interview this applicant. Their name and contact details are now visible.
         </h3>
-        <p class="govuk-body">You can now see this applicant's name and contact details.</p>
+        <p class="govuk-body">Your decision has been shared with the training provider.</p>
       </div>
     </div>
 
@@ -37,6 +37,9 @@ Manage apprentices
       </h1>
 
       <p class="govuk-body-l">Application ID: 678CFR0</p>
+
+<!-- CONTACT DETAILS -->
+<h2 class="govuk-heading-l">Contact details </h2>
 
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
@@ -49,6 +52,7 @@ Manage apprentices
       </div>
     </section>
   
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- ABOUT YOU -->
     <section>
