--- a/app/views/v14/employer/account/application-shared-v2.html
+++ b/app/views/v14/employer/account/application-shared-v2.html
@@ -152,17 +152,17 @@ Manage apprentices
           <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Respond to training provider
+                Do you want to interview this applicant?
               </h1>
             </legend>
-            <!-- <div id="contact-hint" class="govuk-hint">
-              Select one option.
-            </div> -->
+            <div id="contact-hint" class="govuk-hint">
+              Your response will be shared with the training provider.
+            </div>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="contact" name="response" type="radio" value="yes">
                 <label class="govuk-label govuk-radios__label" for="contact">
-                  Yes, I would like to interview this applicant
+                  Yes
                 </label>
                 <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
                   This will show the applicant's name and contact information.
@@ -180,7 +180,7 @@ Manage apprentices
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="contact-3" name="response" type="radio" value="no" data-aria-controls="conditional-contact-3">
                 <label class="govuk-label govuk-radios__label" for="contact-3">
-                  No, I don't want to interview this applicant
+                  No
                 </label>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden govuk-character-count" id="conditional-contact-3" data-module="govuk-character-count" data-maxwords="200">
