--- a/app/views/v14/employer/view/6b-shared-applications-v2.html
+++ b/app/views/v14/employer/view/6b-shared-applications-v2.html
@@ -29,86 +29,51 @@ Manage vacancy
     {
       id: "C5662EA",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v2",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C5782EA",
+      id: "LP07688",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v2",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C9068EA",
+      id: "LHK76TY",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v2",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C1554EA",
+      id: "CP765D8",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v2",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C5768EA",
+      id: "R384JP4",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v2",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C9759EA",
+      id: "B1003GH",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v2",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C3444EA",
+      id: "KR9678F",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v2",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
-    },
-    {
-      id: "C6456EA",
-      status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
-      classes: "govuk-tag--blue",
-      date: "Not reviewed"
-    },
-    {
-      id: "C0873EA",
-      status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
-      classes: "govuk-tag--blue",
-      date: "Not reviewed"
-    },
-    {
-      id: "C1778EA",
-      status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
-      classes: "govuk-tag--blue",
-      date: "Not reviewed"
-    },
-    {
-      id: "C5545EA",
-      status: "INTERVIEWING",
-      link: "../account/application-shared-yes",
-      classes: "govuk-tag--yellow",
-      date: "17 Nov 2022"
-    },
-    {
-      id: "C5676EA",
-      status: "UNSUCCESSFUL",
-      link: "../account/application-shared-no",
-      classes: "govuk-tag--red",
-      date: "14 Nov 2022"
     }
 ]
 %}
