--- a/app/views/v14/employer/view/6b-shared-applications-yes-v2.html
+++ b/app/views/v14/employer/view/6b-shared-applications-yes-v2.html
@@ -14,6 +14,7 @@ Adverts
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+
     <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
       <div class="govuk-notification-banner__header">
         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
@@ -22,9 +23,9 @@ Adverts
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Response for C5564EA sent: Yes, I would like to interview this applicant.
+          Response sent to training provider: Yes, I would like to interview C5686EA (Keith Stewart).
         </h3>
-        <p class="govuk-body">The training provider has been notified.</p>
+        <p class="govuk-body">You can now see this applicant's name and contact details.</p>
       </div>
     </div>
 
@@ -40,96 +41,55 @@ Adverts
 
 {%
   set appsTableData = [
+
     {
-      id: "C5662EA",
+      id: "LP07688",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v1",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C5782EA",
+      id: "LHK76TY",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v1",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C9068EA",
+      id: "CP765D8",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v1",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C1554EA",
+      id: "R384JP4",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v1",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C5768EA",
+      id: "B1003GH",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v1",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C9759EA",
+      id: "KR9678F",
       status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
+      link: "../account/application-shared-v1",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
     },
     {
-      id: "C3444EA",
-      status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
-      classes: "govuk-tag--blue",
-      date: "Not reviewed"
-    },
-    {
-      id: "C6456EA",
-      status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
-      classes: "govuk-tag--blue",
-      date: "Not reviewed"
-    },
-    {
-      id: "C0873EA",
-      status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
-      classes: "govuk-tag--blue",
-      date: "Not reviewed"
-    },
-    {
-      id: "C1778EA",
-      status: "RESPONSE NEEDED",
-      link: "../account/application-shared",
-      classes: "govuk-tag--blue",
-      date: "Not reviewed"
-    },
-    {
-      id: "C5564EA",
+      id: "Keith Stewart",
       status: "INTERVIEWING",
       link: "../account/application-shared-yes",
       classes: "govuk-tag--yellow",
       date: "today"
-    },
-    {
-      id: "C5545EA",
-      status: "INTERVIEWING",
-      link: "../account/application-shared-yes",
-      classes: "govuk-tag--yellow",
-      date: "17 Nov 2022"
-    },
-    {
-      id: "C5676EA",
-      status: "UNSUCCESSFUL",
-      link: "../account/application-shared-no",
-      classes: "govuk-tag--red",
-      date: "14 Nov 2022"
     }
 ]
 %}
