employer banner updated

--- a/app/views/v14/employer/account/application-shared-saved-v1.html
+++ b/app/views/v14/employer/account/application-shared-saved-v1.html
@@ -24,9 +24,9 @@ Manage apprentices
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          You would like to interview this applicant. Their name and contact details are now visible.
+          Response sent to training provider: Yes, I would like to interview this applicant.
         </h3>
-        <p class="govuk-body">Your decision has been shared with the training provider.</p>
+        <p class="govuk-body">You can now see this applicant's name and contact details.</p>
       </div>
     </div>
 
