--- a/app/views/v14/employer/view/6b-shared-applications-yes-v2.html
+++ b/app/views/v14/employer/view/6b-shared-applications-yes-v2.html
@@ -23,9 +23,9 @@ Adverts
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Response sent to training provider: Yes, I would like to interview C5686EA (Keith Stewart).
+          You would like to interview this applicant. Their name and contact details are now visible.
         </h3>
-        <p class="govuk-body">You can now see this applicant's name and contact details.</p>
+        <p class="govuk-body">Your decision has been shared with the training provider.</p>
       </div>
     </div>
 
