employer manage advert page content disability confident

--- a/app/views/v14/employer/view/4b-manage-advert.html
+++ b/app/views/v14/employer/view/4b-manage-advert.html
@@ -131,7 +131,7 @@ Manage advert
 
 <!-- START disability confident -->
 <div class="govuk-inset-text">
-  Gloucestershire Health and Care NHS Foundation Trust is a disability confident employer.
+  You are signed up to the <a href="#">Disability Confident scheme (opens in new tab)</a>.
 </div>
 <!-- END disability confident -->
 
