--- a/app/views/v14/employer/view/3c-manage-applications.html
+++ b/app/views/v14/employer/view/3c-manage-applications.html
@@ -35,7 +35,7 @@ Manage vacancy
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="#">
-        Close  <span class="govuk-visually-hidden"> advert</span>
+        Close advert</span>
       </a>
     </dd>
   </div>
@@ -56,7 +56,7 @@ Manage vacancy
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="3c-dates">
-        Change<span class="govuk-visually-hidden"> advert dates</span>
+        Change dates</span>
       </a>
     </dd>
   </div>
