--- a/app/views/v14/employer/account/application-new.html
+++ b/app/views/v14/employer/account/application-new.html
@@ -13,49 +13,57 @@ Manage apprentices
 {% endblock %}
 {% block content %}
 
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+
+
     <section>
-      <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">Rolo Tomasi</h1>
-      <div class="govuk-!-margin-bottom-6">
-        <span class="govuk-!-font-weight-bold">Application ID: </span>1DAB217
-      </div>
+      <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
+        Keith Stewart
+      </h1>
+
+      <p class="govuk-body-l">Application ID: 678CFR0</p>
 
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
-          Faizal Dawood<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
+          Keith Stewart<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
         </p>
         <p class="govuk-body">
           07812345678
-          <br> <a href="mailto:faizal.dawood@domainname.co.uk">faizal.dawood@domainname.co.uk</a>
+          <br> <a href="mailto:faizal.dawood@domainname.co.uk">keith.stewart@domainname.co.uk</a>
         </p>
       </div>
     </section>
 
+
+<!-- ABOUT YOU -->
     <section>
       <h2 class="govuk-heading-l">About you</h2>
 
       <div class="govuk-form-group">
         <span class="govuk-label govuk-!-font-weight-bold">What are your main strengths?</span>
-        <span>fdfghm</span>
+        <span>XXXXXXXXXX</span>
       </div>
       <div class="govuk-form-group">
         <span class="govuk-label govuk-!-font-weight-bold">What skills would you like to improve during this apprenticeship?</span>
-        <span>fgrszfh</span>
+        <span>XXXXXXXXXX</span>
       </div>
       <div class="govuk-form-group">
         <span class="govuk-label govuk-!-font-weight-bold">What are your hobbies and interests?</span>
-        <span>erheraherth</span>
+        <span>XXXXXXXXXX</span>
       </div>
     </section>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+<!-- EDUCATION -->
     <section>
       <h2 class="govuk-heading-l">Education</h2>
 
       <h3 class="govuk-heading-s">Name of most recent school/college</h3>
-      <p>etone</p>
+      <p>XXXXXXXXXX</p>
 
       <h3 class="govuk-heading-s">Years attended</h3>
       <table>
@@ -76,32 +84,32 @@ Manage apprentices
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+<!-- QUALIFICATIONS -->
     <section>
       <h2 class="govuk-heading-l">Qualifications</h2>
 
-      <p>I don't have any qualifications</p>
+      <p>XXXXXXXXXX</p>
 
     </section>
 
     <section>
       <h2 class="govuk-heading-l">Work experience</h2>
 
-      <p>I don't have any work experience</p>
+      <p>XXXXXXXXXX</p>
 
     </section>
 
     <section>
       <h2 class="govuk-heading-l">Training courses</h2>
 
-      <p>I have not been on any training courses</p>
+      <p>XXXXXXXXXX</p>
 
 
     </section>
 
+<!-- SKILLS -->
     <section>
       <h2 class="govuk-heading-l">Skills the Employer wants</h2>
-
-
 
       <p>
         Communication skills
@@ -111,66 +119,118 @@ Manage apprentices
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- EMPLOYER QUESTIONS -->
-<section>
-  <h2 class="govuk-heading-l">Additional questions</h2>
+    <section>
+      <h2 class="govuk-heading-l">Additional questions</h2>
 
-  <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
-  <p>[applicant answer]</p>
+      <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
+      <p>XXXXXXXXXX</p>
 
-  <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
-  <p>Yes</p>
+      <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
+      <p>Yes</p>
 
-</section>
+    </section>
 
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- ADDITIONAL QUESTIONS -->
-<section>
-  <h2 class="govuk-heading-l">Equality questions</h2>
+    <section>
+      <h2 class="govuk-heading-l">Equality questions</h2>
 
-  <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
-  <p>No</p>
+      <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
+      <p>No</p>
 
-  <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
-  <p>
-    <span>I don't have any interview support requirements</span>
+      <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
+      <p>
+        <span>I don't have any interview support requirements</span>
 
-  </p>
-  <br>
-
+      </p>
+      <br>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
-    <section>
-      <h3 class="govuk-heading-l">Outcome</h3>
-      <form method="post">
-        <div class="hide-print">
-                    <!-- Manage application method -->
-                    <div class="govuk-form-group">
-                          <div class="govuk-radios govuk-radios--conditional" data-module="radios">
-                            <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="outcome-successful" name="outcome" type="radio" value="True">
-                                <label for="outcome-successful" class="govuk-label govuk-radios__label" >
-                                    Successful
-                                </label>
-                            </div>
+<!-- RADIO BUTTONS     -->
+<section>
+     
+      <form method="post" action="application-new">
 
-                            <div class="govuk-radios__item">
-                              <input class="govuk-radios__input" id="outcome-successful" name="outcome" type="radio" value="True">
-                              <label for="outcome-successful" class="govuk-label govuk-radios__label" >
-                                  Unsuccessful
-                              </label>
-                          </div>
-                          </div>
-                    </div>
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-fieldset__heading">
+                What do you want to do with this application?
+              </h1>
+            </legend>
 
-
+            <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application" name="application" type="radio" value="review">
+                <label class="govuk-label govuk-radios__label" for="application">
+                  Give 'review' status
+                </label>
+                <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+                 The applicant and employer will not be notified.
                 </div>
-      </form>
-      <div class="form-group hide-print">
-          <a href="manage-vacancy" class="govuk-button">Save</a>
-          <a href="manage-vacancy" class="govuk-link">Cancel</a>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-email">
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email">
+                </div>
+              </div>
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application-3" name="application" type="radio" value="shortlist">
+                <label class="govuk-label govuk-radios__label" for="application-3">
+                  Give 'interviewing' status
+                </label>
+                <div id="sign-in-3-item-hint" class="govuk-hint govuk-radios__hint">
+                  The applicant and employer will not be notified.
+                </div>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-3">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-text">
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contact-by-text" type="tel" autocomplete="tel">
+                </div>
+              </div>
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application-4" name="application" type="radio" value="successful" data-aria-controls="conditional-contact-4">
+                <label class="govuk-label govuk-radios__label" for="application-4">
+                  Make successful
+                </label>
+                <div id="sign-in-4-item-hint" class="govuk-hint govuk-radios__hint">
+                  Notify the applicant that they're being offered the apprenticeship.
+                </div>
+              </div>
+  
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application-5" name="application" type="radio" value="unsuccessful" data-aria-controls="conditional-contact-5">
+                <label class="govuk-label govuk-radios__label" for="application-4">
+                  Make unsuccessful
+                </label>
+                <div id="sign-in-4-item-hint" class="govuk-hint govuk-radios__hint">
+                  Notify the applicant that they aren't successful and give them feedback.
+                </div>
+              </div>
+
+    
+          </fieldset>
+        </div>
+              
+<!-- BUTTONS -->
+      <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">
+          Continue
+        </button>
+      
+        <a class="govuk-link" href="#">Cancel</a>
       </div>
+      
+    </form>
 
 
 
@@ -179,8 +239,6 @@ Manage apprentices
 
   </div>
 </div>
-
-
 
 
 {% endblock %}
