employer manage applications journey replicated

--- a/app/views/v14/_summary.html
+++ b/app/views/v14/_summary.html
@@ -93,18 +93,24 @@
                   <li><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/6-shared-new?filter=shared new">UPDATED shared applications (new to review) filter</li>
                 </td>
               </tr>
+
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/6b-shared-applications">Shared applications per advert page</a></td>
+                <td class='govuk-table__cell'>Shared applications page</td>
                 <td class='govuk-table__cell'>
-                  <li>NEW page</li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/{{version}}/employer/view/6b-shared-applications-v1">Journey 1 for UR</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/{{version}}/employer/view/6b-shared-applications-v2">Journey 2 for UR</li>
                 </td>
               </tr>
+
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/account/application-shared">Shared anonymous application</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/{{version}}/employer/view/3c-manage-applications">'Manage adverts' page</a></td>
                 <td class='govuk-table__cell'>
-                  <li>NEW page</li>
+                  <li>CHANGED summary table</li>
+                  <li>CHANGED vacancy analytics</li>
+                  <li>UPDATED manage application statuses</li>
                 </td>
               </tr>
+
               <tr class='govuk-table__row'>
                 <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/create/wages">Apprenticeship wage</a></td>
                 <td class='govuk-table__cell'>
