--- a/app/views/v14/employer/create/start-page.html
+++ b/app/views/v14/employer/create/start-page.html
@@ -28,7 +28,7 @@ Create an advert - Your apprenticeship adverts - {{serviceName}} - GOV.UK
       </ul>
 
       <div class="govuk-inset-text">
-        If you don’t pay the apprenticeship levy, you’ll need to  <a href="#">reserve apprenticeship funding</a> before creating an advert.
+        If you don’t pay the apprenticeship levy, you’ll need to <a href="#">reserve apprenticeship funding</a> before an apprenticeship can start.
       </div>
 
 
