--- a/app/views/v14/employer/home.html
+++ b/app/views/v14/employer/home.html
@@ -132,7 +132,7 @@ GOV.UK Prototype Kit
       </div>
       <div class="govuk-grid-column-one-third">
 
-          <div class="govuk-tabs" data-module="govuk-tabs">
+          <!-- <div class="govuk-tabs" data-module="govuk-tabs">
   <ul class="govuk-tabs__list" role="tablist">
     <li class="govuk-tabs__list-item govuk-tabs__list-item--selected" role="presentation">
         <a class="govuk-tabs__tab" href="#" id="tab_past-day" role="tab" aria-controls="past-day" aria-selected="true" tabindex="0">
@@ -145,7 +145,7 @@ GOV.UK Prototype Kit
       <p>Applications shared to review  <br>
         <a href="./view/6-shared-new">View applications</a>
       </p>
-  </section>
+  </section> -->
   <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="past-week" role="tabpanel" aria-labelledby="tab_past-week">
     <ol id="item-list">
       <li class="item">
