--- a/app/views/v14/employer/view/3b-vacancy-analytics.html
+++ b/app/views/v14/employer/view/3b-vacancy-analytics.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "ma-layout.html" %}
 
 {% block pageTitle %}
 Manage vacancy
@@ -14,7 +14,7 @@ Manage vacancy
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full-width">
 
-    <h1 class="govuk-heading-l">Vacancy analytics</h1>
+    <h1 class="govuk-heading-l">Advert analytics</h1>
 
 <!-- analytics START -->
 
