--- a/app/views/v14/employer/view/3c-manage-applications-in-review.html
+++ b/app/views/v14/employer/view/3c-manage-applications-in-review.html
@@ -1,4 +1,4 @@
-{% extends "ma-layout.html" %}
+{% extends "ma-home-layout.html" %}
 
 {% block pageTitle %}
 Manage vacancy
@@ -6,7 +6,7 @@ Manage vacancy
 
 {% block beforeContent %}
 {{super()}}
-<a href="3b-manage-vacancy" class="govuk-back-link">Back</a>
+<a href="3a-live" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -14,10 +14,24 @@ Manage vacancy
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Done
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <h3 class="govuk-notification-banner__heading">
+          Application status changed to 'in review'.
+        </h3>
+      </div>
+    </div>
+    
+        <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
     <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
 
   
-    <p class="govuk-body-l">Advert reference: VAC1000000997</p>
+    <p class="govuk-body-l">Vacancy reference: VAC1000000997</p>
 
 
 <!-- ////START vacancy summry//// -->
@@ -138,6 +152,61 @@ Manage vacancy
 </div>
 </div>
 
+<!-- manage applications -->
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+
+  <h2 class="govuk-heading-m">Applications (10)</h2>
+
+
+<!-- search box START -->
+    <fieldset class="govuk-fieldset">
+    <legend class="govuk-visually-hidden">Search employer name or account name</legend>
+    <div class="govuk-form-group search-field search-field-darker">
+
+      <div class="search-input search-input-with-button">
+        <label class="govuk-label" for="query">
+          <!--Client reference-->
+          Search applicant name
+        </label>
+
+        <div class="autocomplete__parent_wrapper">
+          <div class="autocomplete__wrapper">
+            <div aria-atomic="true" aria-live="polite" role="status" style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
+              <span>No search results.</span>
+              <span>,,</span>
+            </div>
+            <input aria-owns="searchOrgs__listbox" autocomplete="off" class="autocomplete__input" id="searchOrgsAuto" name="query" placeholder="" role="combobox" type="text" style="display:none;" value="">
+          </div>
+        </div>
+        <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="">
+      </div>
+      <div class="search-submit">
+        <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search Organisations</button>
+      </div>
+    </div>
+  </fieldset>
+<!-- search box END -->
+
+<!-- START multiple links -->
+
+  <p class="govuk-body" >
+    <a href="6a-share-applications" class="govuk-link govuk-link--no-visited-state">Share multiple applications with employer</a>
+  </p>
+  <p class="govuk-body">
+    <a href="8a-multiple-unsuccessful" class="govuk-link govuk-link--no-visited-state">Make multiple applications unsuccessful</a>
+  </p>
+<!-- END multiple links -->
+
+<!-- START disability confident -->
+<div class="govuk-inset-text">
+  Gloucestershire Health and Care NHS Foundation Trust is signed up to the <a href="https://www.gov.uk/government/collections/disability-confident-campaign" class="govuk-link" rel="noreferrer noopener" target="_blank">Disability Confident scheme (opens in new tab)</a>.
+</div>
+<!-- END disability confident -->
+
+</div>
+</div>
+
 <!-- table START -->
 {%- from "govuk/components/tag/macro.njk" import govukTag -%}
 
@@ -146,9 +215,9 @@ Manage vacancy
     {
       name: "Keith Stewart",
       id: "678CFR0",
-      status: "new",
-      link: "../account/application-new",
-      classes: "govuk-tag--blue",
+      status: "in review",
+      link: "../account/application-review-saved",
+      classes: "govuk-tag--yellow",
       date: "13 Jan 2023",
       disability: "Prefer not to say"
     },
