--- a/app/views/v14/employer/view/3c-manage-applications-unsuccessful-single.html
+++ b/app/views/v14/employer/view/3c-manage-applications-unsuccessful-single.html
@@ -1,4 +1,4 @@
-{% extends "ma-layout.html" %}
+{% extends "ma-home-layout.html" %}
 
 {% block pageTitle %}
 Manage vacancy
@@ -6,7 +6,7 @@ Manage vacancy
 
 {% block beforeContent %}
 {{super()}}
-<a href="3b-manage-vacancy" class="govuk-back-link">Back</a>
+<a href="3a-live" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -14,13 +14,27 @@ Manage vacancy
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
-
-  
-    <p class="govuk-body-l">Advert reference: VAC1000000997</p>
-
-
-<!-- ////START vacancy summry//// -->
+    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Done
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <h3 class="govuk-notification-banner__heading">
+          Ellen Collins's application is unsuccessful.
+        </h3>
+      </div>
+    </div>
+    
+            <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
+        <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
+    
+      
+        <p class="govuk-body-l">Vacancy reference: VAC1000000997</p>
+    
+    
+   <!-- ////START vacancy summry//// -->
 <h2 class="govuk-heading-m">Advert summary</h2>
 
 <dl class="govuk-summary-list">
@@ -147,19 +161,10 @@ Manage vacancy
       name: "Keith Stewart",
       id: "678CFR0",
       status: "new",
-      link: "../account/application-new",
+      link: "../account/application-shared",
       classes: "govuk-tag--blue",
       date: "13 Jan 2023",
       disability: "Prefer not to say"
-    },
-    {
-      name: "Ellen Collins",
-      id: "6H0IL55",
-      status: "new",
-      link: "../account/application-review-no",
-      classes: "govuk-tag--blue",
-      date: "13 Jan 2023",
-      disability: "No"
     },
     {
       name: "Cynthia Perez",
@@ -232,6 +237,15 @@ Manage vacancy
       classes: "govuk-tag--blue",
       date: "16 Jan 2023",
       disability: "Yes"
+    },
+    {
+      name: "Ellen Collins",
+      id: "6H0IL55",
+      status: "unsuccessful",
+      link: "../account/application-review-no",
+      classes: "govuk-tag--red",
+      date: "13 Jan 2023",
+      disability: "No"
     }
 ]
 %}
