--- a/app/views/v14/employer/view/3c-manage-applications-successful.html
+++ b/app/views/v14/employer/view/3c-manage-applications-successful.html
@@ -1,4 +1,4 @@
-{% extends "ma-layout.html" %}
+{% extends "ma-home-layout.html" %}
 
 {% block pageTitle %}
 Manage vacancy
@@ -6,18 +6,20 @@ Manage vacancy
 
 {% block beforeContent %}
 {{super()}}
-<a href="3b-manage-vacancy" class="govuk-back-link">Back</a>
+<a href="3a-live" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
 {% block content %}
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+        <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
     <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
 
   
-    <p class="govuk-body-l">Advert reference: VAC1000000997</p>
+    <p class="govuk-body-l">Vacancy reference: VAC1000000997</p>
 
 
 <!-- ////START vacancy summry//// -->
@@ -143,90 +145,63 @@ Manage vacancy
 
 {%
   set appsTableData = [
-    {
-      name: "Keith Stewart",
-      id: "678CFR0",
-      status: "new",
-      link: "../account/application-new",
-      classes: "govuk-tag--blue",
-      date: "13 Jan 2023",
-      disability: "Prefer not to say"
-    },
-    {
-      name: "Ellen Collins",
-      id: "6H0IL55",
-      status: "new",
-      link: "../account/application-review-no",
-      classes: "govuk-tag--blue",
-      date: "13 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Cynthia Perez",
-      id: "FL13JK0",
-      status: "new",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "15 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Susie Noble",
-      id: "LL13J9H",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "15 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Judy Ward",
-      id: "897DW5T",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "15 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Charles Davis",
-      id: "B2LH789",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "15 Jan 2023",
-      disability: "Prefer not to say"
-    },
-    {
-      name: "Neena Patel",
-      id: "78BH067",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "15 Jan 2023",
-      disability: "No"
-    },
+  {
+    name: "Keith Stewart",
+    id: "678CFR0",
+    status: "Successful",
+    link: "",
+    classes: "govuk-tag--green",
+    date: "13 Jan 2023",
+    disability: "Prefer not to say"
+  },
+  {
+    name: "Cynthia Perez",
+    id: "FL13JK0",
+    status: "in review",
+    link: "#",
+    classes: "govuk-tag--yellow",
+    date: "15 Jan 2023",
+    disability: "No"
+  },
+  {
+    name: "Susie Noble",
+    id: "LL13J9H",
+    status: "in review",
+    link: "",
+    classes: "govuk-tag--yellow",
+    date: "15 Jan 2023",
+    disability: "No"
+  },
+  {
+    name: "Charles Davis",
+    id: "B2LH789",
+    status: "shared",
+    link: "",
+    classes: "govuk-tag--yellow",
+    date: "15 Jan 2023",
+    disability: "Prefer not to say"
+  },
+  {
+    name: "Neena Patel",
+    id: "78BH067",
+    status: "shared",
+    link: "",
+    classes: "govuk-tag--yellow",
+    date: "15 Jan 2023",
+    disability: "No"
+  },
     {
       name: "Jose Robinson",
       id: "LY6TY44",
-      status: "New",
+      status: "shared",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--yellow",
       date: "15 Jan 2023",
       disability: "Prefer not to say"
     },
     {
       name: "John Smith",
       id: "39DBE1A",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "16 Jan 2023",
-      disability: "Yes"
-    },
-    {
-      name: "Danielle Price",
-      id: "HAK9F56",
       status: "New",
       link: "",
       classes: "govuk-tag--blue",
