--- a/app/views/v14/provider/create/start-page.html
+++ b/app/views/v14/provider/create/start-page.html
@@ -29,7 +29,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
       </ul>
 
       <div class="govuk-inset-text">
-        If the employer doesn’t pay the apprenticeship levy, you’ll need to <a href="#" target="_blank">reserve apprenticeship funding</a> before creating a vacancy.
+        If the employer doesn’t pay the apprenticeship levy, you’ll need to <a href="#" target="_blank">reserve apprenticeship funding</a> before the apprenticeship can start.
       </div>
 
 
