--- a/app/views/v14/employer/view/1b-manage-advert.html
+++ b/app/views/v14/employer/view/1b-manage-advert.html
@@ -19,6 +19,7 @@ Manage advert
   
     <p class="govuk-body-l">Advert reference: VAC1000000997</p>
 
+    <p>This vacancy has been sent to us for review. We will tell you within 24 hours if you need to make any edits to this vacancy. </p>
 
 <!-- ////START vacancy summry//// -->
 <h2 class="govuk-heading-m">Advert summary</h2>
@@ -72,7 +73,6 @@ Manage advert
 
 <br>
 
-    <p>This application is currently being reviewed by DfE . This will take 48 hours. </p>
 
 
 </div>
