--- a/app/views/v14/employer/view/1b-manage-advert.html
+++ b/app/views/v14/employer/view/1b-manage-advert.html
@@ -19,7 +19,7 @@ Manage advert
   
     <p class="govuk-body-l">Advert reference: VAC1000000997</p>
 
-    <p>This vacancy has been sent to us for review. We will tell you within 24 hours if you need to make any edits to this advert. </p>
+    <p>This advert has been sent to us for review. We will tell you within 24 hours if you need to make any edits to this advert. </p>
 
 <!-- ////START vacancy summry//// -->
 <h2 class="govuk-heading-m">Advert summary</h2>
