content updates training provider sharing

--- a/app/views/v14/provider/account/application-new.html
+++ b/app/views/v14/provider/account/application-new.html
@@ -26,6 +26,9 @@ Manage apprentices
 
       <p class="govuk-body-l">Application ID: 678CFR0</p>
 
+<!-- CONTACT DETAILS -->
+      <h2 class="govuk-heading-l">Contact details</h2>
+
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
           Keith Stewart<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
@@ -37,6 +40,7 @@ Manage apprentices
       </div>
     </section>
 
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- ABOUT YOU -->
     <section>
