--- a/app/views/v14/provider/view/3d-check-share.html
+++ b/app/views/v14/provider/view/3d-check-share.html
@@ -19,9 +19,6 @@ Manage vacancy
 
     
   <!-- list START       -->
-        <p class="govuk-body" >
-          <b>Gloucestershire Health and Care NHS Foundation Trust</b> will be sent an anonymised version of this application, with the applicant's name removed:
-        </p>
 
         <div style="background-color: #f3f2f1; padding: 15px;">
 
@@ -33,6 +30,14 @@ Manage vacancy
 
         </div>
 <!-- list END -->
+
+<br><br>
+
+<p class="govuk-body">This application will be shared: </p>
+<ul class="govuk-list govuk-list--bullet">
+  <li>to the employer’s apprenticeship service account </li>
+  <li>anonymously—but the employer will see the applicant's contact details if they want to interview the applicant</li>
+</ul>
 
 <br>
 
@@ -48,9 +53,6 @@ Manage vacancy
                 <label class="govuk-label govuk-radios__label" for="share_applications_yes">
                   Yes, share this application with employer 
                 </label>
-                <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-                  The application will be sent to the employer's apprenticeship service account for review.
-                </div>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_no" name="share_applications" type="radio" value="no">
