--- a/app/views/v14/provider/account/application-review-no.html
+++ b/app/views/v14/provider/account/application-review-no.html
@@ -29,16 +29,21 @@ Manage apprentices
 
       <p class="govuk-body-l">Application ID: 6H0IL55</p>
 
-      <div class="panel panel-border-narrow">
-        <p class="govuk-body">
-          Ellen Collins<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
-        </p>
-        <p class="govuk-body">
-          07812345678
-          <br> <a href="mailto:faizal.dawood@domainname.co.uk">ellen.collins@domainname.co.uk</a>
-        </p>
-      </div>
-    </section>
+<!-- CONTACT DETAILS -->
+<h2 class="govuk-heading-l">Contact details</h2>
+
+<div class="panel panel-border-narrow">
+  <p class="govuk-body">
+    Ellen Collins<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
+  </p>
+  <p class="govuk-body">
+    07812345678
+    <br> <a href="mailto:faizal.dawood@domainname.co.uk">ellen.collins@domainname.co.uk</a>
+  </p>
+</div>
+</section>
+
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 
 <!-- ABOUT YOU -->
