--- a/app/views/v14/provider/view/6b-check-share.html
+++ b/app/views/v14/provider/view/6b-check-share.html
@@ -19,10 +19,6 @@ Manage vacancy
 
 
   <!-- list START       -->
-        <p class="govuk-body" >
-          <b>Gloucestershire Health and Care NHS Foundation Trust</b> will be sent anonymised versions of these applications, with the applicants' names removed:
-        </p>
-
         <div style="background-color: #f3f2f1; padding: 15px;">
 
         <ul class="govuk-list govuk-list--bullet">
@@ -42,9 +38,17 @@ Manage vacancy
 
             {% endif %}
         </ul>
+</div>
+
 <!-- list END -->
 
-</div>
+<br><br>
+
+<p class="govuk-body">These application will be shared: </p>
+<ul class="govuk-list govuk-list--bullet">
+  <li>to the employer’s apprenticeship service account </li>
+  <li>anonymously—but the employer will see the applicant's contact details if they want to interview the applicant</li>
+</ul>
 
 <br>
 
@@ -60,9 +64,6 @@ Manage vacancy
                 <label class="govuk-label govuk-radios__label" for="share_applications_yes">
                   Yes, share these applications with employer
                 </label>
-                <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-                  Applications will be sent to the employer's apprenticeship service account for review.
-                </div>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_no" name="share_applications" type="radio" value="no">
