--- a/app/views/v14/provider/view/0-dashboard.html
+++ b/app/views/v14/provider/view/0-dashboard.html
@@ -205,8 +205,8 @@ Recruitment - {{serviceName}} - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">0</span>
-              <a class="card-link" href="#">
+              <span class="das-card--stat">4</span>
+              <a class="card-link" href="6-employer-reviewed">
                 Employer-reviewed applications
               </a>
             </h3>
