content updates on employer anonymisation journey

--- a/app/views/v14/employer/account/application-shared-saved-v1.html
+++ b/app/views/v14/employer/account/application-shared-saved-v1.html
@@ -24,7 +24,7 @@ Manage apprentices
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Response sent to training provider: Yes, I would like to interview this applicant.
+          You want to interview this applicant. Your response has been sent to the training provider.
         </h3>
         <p class="govuk-body">You can now see this applicant's name and contact details.</p>
       </div>
