--- a/app/views/v14/employer/account/application-shared-v2.html
+++ b/app/views/v14/employer/account/application-shared-v2.html
@@ -165,7 +165,7 @@ Manage apprentices
                   Yes
                 </label>
                 <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-                  This will show the applicant's name and contact information.
+                  This will show the applicant's name and contact details.
                 </div>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
