--- a/app/views/v14/employer/view/6b-shared-applications-no.html
+++ b/app/views/v14/employer/view/6b-shared-applications-no.html
@@ -22,9 +22,8 @@ Adverts
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Response for C5686EA sent: No, I don't want to interview this applicant
+          C586EA has been made unsuccessful. Your response has been sent to the training provider.
         </h3>
-        <p class="govuk-body">The training provider has been notified.</p>
       </div>
     </div>
 
