--- a/app/views/v14/employer/view/6b-shared-applications-yes-v2.html
+++ b/app/views/v14/employer/view/6b-shared-applications-yes-v2.html
@@ -23,9 +23,9 @@ Adverts
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          You would like to interview this applicant. Their name and contact details are now visible.
+          You want to interview  applicant C5662EA. The applicant is now listed as Keith Stewart.
         </h3>
-        <p class="govuk-body">Your decision has been shared with the training provider.</p>
+        <p class="govuk-body">The applicant's contact details are now shown in their application. Your response has been sent to the training provider.</p>
       </div>
     </div>
 
