--- a/app/views/v14/provider/view/6b-check-share.html
+++ b/app/views/v14/provider/view/6b-check-share.html
@@ -44,7 +44,7 @@ Manage vacancy
 
 <br><br>
 
-<p class="govuk-body">These application will be shared: </p>
+<p class="govuk-body">These applications will be shared: </p>
 <ul class="govuk-list govuk-list--bullet">
   <li>to the employer’s apprenticeship service account </li>
   <li>anonymously—but the employer will see the applicant's contact details if they want to interview the applicant</li>
